--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^2.0.9",
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "flowbite": "^1.6.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "vue": "^2.6.14",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
