--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
