--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "flowbite": "^1.6.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^2.6.14",
+    "vue-autocomplete-vee-validate-js": "^0.1.0",
     "vue-axios": "^3.5.2",
     "vue-router": "^2.6.0",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
