--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "flowbite": "^1.6.3",
+    "lodash": "^4.17.21",
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^2.6.14",
     "vue-autocomplete-vee-validate-js": "^0.1.0",
